2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Rename EpcContent: "Inhalt" is "contents" with "s", not "content".

	* docs/reference/libepc/libepc-sections.txt,
	examples/test-publisher.c, libepc/publisher.c,
	libepc/publisher.h: Rename EpcContent to EpcContents.

2007-11-13  Mathias Hasselmann  <mathias@openismus.com>

	Distribute gtk-doc.make, libepc-docs.xml and libepc-sections.txt.

	* Makefile.am, docs/reference/libepc/Makefile.am: Update EXTRA_DIST.

2007-11-13  Mathias Hasselmann  <mathias@openismus.com>

	Add error handling to epc_consumer_lookup.

	* examples/test-consumer.c, tests/test-consumer-by-name.c:
	Pass error argument to epc_consumer_lookup.
	* docs/reference/libepc/libepc-sections.txt: Add EPC_HTTP_ERROR.
	* libepc/consumer.c, libepc/consumer.h: Add error handling to
	epc_consumer_lookup. Add EPC_HTTP_ERROR and epc_http_error_quark.
	* Makefile.am: Add libepc/libepc.la to LDADD variable of
	examples/test-consumer.

2007-11-13  Mathias Hasselmann  <mathias@openismus.com>

	Do more restrictive argument checks in epc_dispatcher_add_service to
	work arround Avahi race conditions.

	* libepc/dispatcher.c: Do more restrictive argument checks in
	epc_dispatcher_add_service to work arround Avahi race conditions.
	* libepc/publisher.c, tests/test-dispatcher-subtypes.c:
	Use epc_dispatcher_add_service_subtype instead of
	epc_dispatcher_add_service to publish subtypes.
	* tests/framework.c, tests/framework.h:
	Rename epc_test_pass to epc_test_pass_once. Add epc_test_pass_many.
	* tests/*: Rename epc_test_pass to epc_test_pass_once.

2007-11-12  Mathias Hasselmann  <mathias@openismus.com>

	Fix several issues to make distcheck happy.

	* Makefile.am: Add BUILT_SOURCES and EXTRA_DIST files. Fix the
	reference manual's dist-hook. Fix some build-dir != source-dir issues.
	Properly clean up, and maybe work arround some automake bug.
	* docs/reference/libepc/Makefile.am: Correctly pass the multiple
	source dirs to gtk-doc.
